--- a/demo/index.html
+++ b/demo/index.html
@@ -14,6 +14,7 @@
 </body>
 
 <script src="../source/js/calendar.js"></script>
+<!--<script src="../source/js/calendar2.js"></script>-->
 <script>
     let calendar1 = new Calendar({targetId: 'calendar_monday'}),
         calendar2 = new Calendar({firstDayOfTheWeek: 0, targetId: 'calendar_sunday'});
